--- a/Chatbot.ipynb
+++ b/Chatbot.ipynb
@@ -306,7 +306,7 @@
    ],
    "source": [
     "def chat():\n",
-    "    print(\"Start talking with the bot (type quit to stop)!\")\n",
+    "    print(\"Start talking with the bot (say quit to stop)!\")\n",
     "    while True:\n",
     "        print(\"_____________________________ \\nyour turn : \")\n",
     "        inp = get_audio()\n",
